Wed Apr 27 18:51:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_array/any_op_cs.cpp:
        * TAO_IDL/be/be_visitor_sequence/any_op_cs.cpp:
        * TAO_IDL/be/be_visitor_structure/any_op_cs.cpp:
        * TAO_IDL/be/be_visitor_union/any_op_cs.cpp:
        * TAO_IDL/be/be_visitor_valuetype/any_op_cs.cpp:
          Generate template specializations withing namespace TAO {} to
          resolve compiler errors with Visual Age

        * tao/Basic_Argument_T.h:
        * tao/Special_Basic_Argument_T.h:
        * tao/UB_String_Argument_T.h:
          Removed not needed mutable keyword

        * tao/TAOA.cpp:
        * tao/WrongTransactionA.cpp:
        * tao/IORManipulation/IORA.cpp:
        * tao/Messaging/*A.cpp:
        * tao/Messaging/*C.{h,cpp,inl}:
        * tao/ObjRefTemplate/*A.cpp:
        * tao/ObjRefTemplate/*C.{h,cpp,inl}:
        * tao/TypeCodeFactory/TypeCodeFactoryA.cpp:
        * tao/TypeCodeFactory/TypeCodeFactoryC.{h,cpp}:
          Regenerated

Wed Apr 27 18:36:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/util/utl_string.cpp:
          Include OS_NS_ctype.h and use ace_toupper and ace_isalpha to
          fix compile errors with Linux RH 2.1AS IA64

Tue Apr 26 13:22:08 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_arg_traits.cpp (visit_string):

          Changed generation of the arg traits template specialization
          to have an #ifndef guard using the typedef name for the
          string, if any, to ensure that the guards will be unique
          for each typedef, and that none of the arg traits
          specializations are hidden. Thanks to Stanislaw Trytek
          <tryteks@pit.edu.pl> for reporting the resulting compile
          problem and for sending in an example IDL file.

        * tests/IDL_Test/typedef.idl:

          Added the example IDL file mentioned above to the test suite.
